manifests/ingress/04-jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: jaeger
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.44.207.222.188.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
